# rascal

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  nightly.yml  release.yml
benches/: parser_bench.rs
docs/: v1-spec-yolo-mode-spec.md
examples/: nat.rhl
examples/verified/: bst.rhl  list.rhl
scripts/: prepare-release.sh
src/: codegen.rs  diagnostics.rs  hir.rs  lib.rs  main.rs  optimizer.rs  ownership.rs  parser.rs  smt.rs  verification_backend.rs
tests/: integration_tests.rs  parser_tests.rs
