[package]
name = "rascal"
version = "0.1.0"
edition = "2021"
authors = ["Rascal Contributors"]
description = "A verification-oriented Haskell-to-Rust transpiler"
license = "MIT"
repository = "https://github.com/paiml/rascal"

[dependencies]
# Parser dependencies
nom = "7.1"
thiserror = "1.0"
logos = "0.14"

# HIR and types
derive_more = "0.99"
petgraph = "0.6"
indexmap = "2.0"

# SMT solving
z3 = { version = "0.12", features = ["static-link-z3"], optional = true }

# Code generation
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
prettyplease = "0.2"

# Verification backends
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI and utilities
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
colored = "2.0"
anyhow = "1.0"

# Testing and benchmarking
proptest = { version = "1.0", optional = true }
criterion = { version = "0.5", features = ["html_reports"] }

[dev-dependencies]
insta = "1.31"
tempfile = "3.8"
pretty_assertions = "1.4"

[features]
default = []
quickcheck = ["proptest"]
smt-backend = ["z3"]
verification = []


[[bench]]
name = "parser_bench"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1

[profile.bench]
debug = true
